--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -32,6 +32,7 @@ img {
 
 // typography
 body {
+    @include font-smoothing;
     background-color: $bg-color;
     font-family: $base-font-family;
     font-size: $base-font-size;
@@ -39,38 +40,44 @@ body {
     font-weight: normal;
     font-style: normal;
     font-size: $base-font-size;
-    color: $text-color;
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
     font-feature-settings: "kern" on;
+    color: $text-color;
+    padding-left: $gutter-xs;
+    padding-right: $gutter-xs;
+    @include breakpoint(md) {
+        padding-left: $gutter-md;
+        padding-right: $gutter-md;
+    }
+}
+
+main {
+    max-width: 82em;
+    margin: 0 auto;
 }
 
 // headings & faux headings
 h1, h2, h3, h4, h5, h6,
 .alpha, .beta, .gamma, .delta, .epsilon {
+    width: 100%;
+    margin-top: 0;
     font-family: $heading-font-family;
     font-weight: normal;
-    width: 100%;
+    line-height: 1;
 }
 
 // use jeremy keith's greek alphabet solution
 h1,
 .alpha {
-    font-family: $font-sans-serif-black;
-    font-size: 3.6em;
-    line-height: 1;
     margin-top: 0;
     margin-bottom: 0;
-
+    font-family: $font-sans-serif-black;
+    font-size: 3.6em;
     @include breakpoint(sm){
         font-size: 4.2em;
     }
-
     @include breakpoint(md){
         font-size: 4.5em;
     }
-
     @include breakpoint(xl){
         font-size: 7em;
     }
@@ -78,34 +85,29 @@ h1,
 
 h2,
 .beta {
-    font-size: 1.7em;
-    line-height: 1;
-    margin-top: .627450980392157em;
     margin-bottom: .627450980392157em;
+    font-size: 1.7em;
 }
 
 h3,
 .gamma {
-    font-size: 1.3em;
-    line-height: 1em;
-    margin-top: 1em;
     margin-bottom: .3em;
+    font-size: 1.3em;
+    line-height: 1.3;
 }
 
 h4,
 .delta {
-    font-size: 1em;
-    line-height: 1.6em;
-    margin-top: 1.6em;
     margin-bottom: 0;
+    font-size: 1em;
+    line-height: 1.6;
 }
 
 h5,
 .epsilon {
-    font-size: 1em;
-    line-height: 1.6em;
-    margin-top: 1.6em;
     margin-bottom: 0;
+    font-size: 1em;
+    line-height: 1.6;
 }
 
 p,
@@ -167,7 +169,7 @@ abbr {
         right: 0;
         height: 1em;
         background: rgba($brand-color, .15);
-        transform: scaleY(.6) translateY(-.15em);
+        transform: scaleY(.15) translateY(-.15em);
         transform-origin: center bottom;
         transition: transform .15s ease-out;
     }
